// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcPanel > #slots > #footer - should render footer slot section if slot is passed 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <div
        class="ec-panel__footer"
        data-test="ec-panel__footer"
      >
        
        <h2>
          Footer Section
        </h2>
        
      </div>
    </div>
  </div>
</aside>
`;

exports[`EcPanel > #slots > #header - should render header slot section if slot is passed 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <div
        class="ec-panel__header"
        data-test="ec-panel__header"
      >
        
        <h2>
          Header Section
        </h2>
        
      </div>
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > #slots > #main - should render main slot section if slot is passed 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        <p>
          Main content section
        </p>
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > :props > :show - should not render the panel when is false 1`] = `<!--v-if-->`;

exports[`EcPanel > :props > :show - should render the panel when is true 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > @events > @back > should not render back button when event handler attribute is not present 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > @events > @back > should render back button when event handler attribute is present 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <button
        aria-label="Go back"
        class="ec-panel__header-action ec-panel__header-action--back"
        data-test="ec-panel__header-action--back"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-left"
          />
        </svg>
      </button>
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > should use given attributes 1`] = `
<aside
  class="ec-panel my-class"
  data-test="my-data-test ec-panel"
  id="my-id"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > v-model > should not render the panel when we pass to model false 1`] = `<!--v-if-->`;

exports[`EcPanel > v-model > should render the panel when we pass to model true 1`] = `
<aside
  class="ec-panel"
  data-test="ec-panel"
>
  <div
    class="ec-panel__fixed-container"
    data-test="ec-panel__fixed-container"
  >
    <div
      class="ec-panel__header-icons"
      data-test="ec-panel__header-icons"
    >
      <!--v-if-->
      <button
        aria-label="Close panel"
        class="ec-panel__header-action ec-panel__header-action--close"
        data-test="ec-panel__header-action--close"
        type="button"
      >
        <svg
          class="ec-icon ec-panel__header-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </div>
    <div
      class="ec-panel__content-container"
    >
      <!--v-if-->
      <div
        class="ec-panel__main"
        data-test="ec-panel__main"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</aside>
`;

exports[`EcPanel > v-model > should render the panel when we pass to model true 2`] = `<!--v-if-->`;
